--- a/style.css
+++ b/style.css
@@ -26,3 +26,17 @@ button {
 button:hover {
     opacity: 0.8;
 }
+
+#resultDiv {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+th,
+td {
+    width: 500px;
+    border: 1px solid rgb(0, 0, 0);
+    padding: 10px;
+}
